<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

       <item
           android:id="@+id/homebtn"
           android:title="@string/home"
           android:icon="@drawable/ic_home"
           android:checked="true"
           />

        <item
            android:id="@+id/profile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_person"
            />
        <item
            android:id="@+id/favourite"
            android:title="@string/favourites"
            android:icon="@drawable/ic_favorite"
            />
        <item
            android:id="@+id/order"
            android:title="@string/order_history"
            android:icon="@drawable/ic_history"
            />
        <item
            android:id="@+id/faq"
            android:title="@string/faq"
            android:icon="@drawable/ic_faq"
            />
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"
            />

    </group>

</menu>