<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".SignUpActivity">
 <ProgressBar
     android:id="@+id/sign_up_progress_bar"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:visibility="gone"
     android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/sign_edt_txt_name"
        android:hint="@string/enter_name"
        android:drawableLeft="@drawable/ic_person"
        android:padding="4dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />

    <EditText
        android:id="@+id/sign_edt_txt_email"
        android:hint="@string/enter_email_address"
        android:drawableLeft="@drawable/ic_email"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sign_edt_txt_name"/>

    <EditText
        android:id="@+id/sign_edt_txt_mobile"
        android:hint="@string/enter_mobile_number_10_digits"
        android:drawableLeft="@drawable/ic_phone"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sign_edt_txt_email"/>

    <EditText
        android:id="@+id/sign_edt_txt_del_address"
        android:hint="@string/deliver_address"
        android:drawableLeft="@drawable/ic_location"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sign_edt_txt_mobile"/>

    <EditText
        android:id="@+id/sign_edt_txt_password"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sign_edt_txt_del_address"/>

    <EditText
        android:id="@+id/sign_edt_txt_conf_password"
        android:hint="@string/confirm_password"
        android:drawableLeft="@drawable/ic_lock"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sign_edt_txt_password"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/sign_edt_txt_conf_password"/>

</RelativeLayout>