<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ChangePasswordActivity">

    <EditText
        android:id="@+id/edt_txt_otp"
        android:hint="@string/enter_otp"
        android:padding="4dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
       />

    <EditText
        android:id="@+id/edt_txt_new_password"
        android:hint="@string/password"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_txt_otp"/>

    <EditText
        android:id="@+id/edt_txt_conf_new_password"
        android:hint="@string/confirm_password"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_txt_new_password"/>


    <Button
        android:id="@+id/btn_submit"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/edt_txt_conf_new_password"/>

</RelativeLayout>