<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_invert"
        android:scaleType="fitCenter"
        android:padding="4dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:foregroundGravity="center_horizontal"/>

    <EditText
        android:id="@+id/edt_txt_mobile"
        android:hint="@string/enter_mobile_number_10_digits"
        android:drawableLeft="@drawable/ic_phone"
        android:padding="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/img_logo"/>

    <EditText
        android:id="@+id/edt_txt_password"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_txt_mobile"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/edt_txt_password"/>

    <TextView
        android:id="@+id/txt_forgot_pass"
        android:text="Forgot Password?"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        />


    <TextView
        android:id="@+id/txt_sign_up"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"/>
</RelativeLayout>